syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Proto.Report";

service ReportProtoService {
  rpc SendReport (ReportProto) returns (ResponseProto);
}

message ReportTraceProto {
  google.protobuf.Timestamp time_stamp = 1;
  string loggingMeta = 2;
  string originClass = 3;
  string log = 4;
}

message ReportProto {
  google.protobuf.Timestamp time_stamp = 1;
  string sortType =2;
  string useCase = 3;
  string state = 4;
  repeated ReportTraceProto traces = 5;
}

message ResponseProto {
  bool success = 1;
}